@@ -1,5 +1,9 @@
 2001-06-10  Martin Baulig  <baulig@suse.de>
 
+	* gnome-ditem.c (gnome_ditem_save): Implemented.
+
+2001-06-10  Martin Baulig  <baulig@suse.de>
+
 	* gnome-ditem.c: Rewrote this to use bonobo-config with the new ditem moniker.
 	(the old version of this file is at CVS revision 1.40).
 
